--- a/src/main/resources/templates/CancelAppointment.html
+++ b/src/main/resources/templates/CancelAppointment.html
@@ -1,18 +1,51 @@
 <!DOCTYPE html>
-<html lang="es">
+<html xmlns:th="http://www.thymeleaf.org" lang="es">
 <head>
     <meta charset="UTF-8">
+    <style>
+        .special-box {
+            border: 2px solid #ff0000; /* Rojo */
+            background-color: #f0f0f0;
+            border-radius: 15px;
+            padding: 20px;
+            margin: 20px 0;
+        }
+    </style>
 </head>
 <body style="background-color: #f0f0f0; font-family: Arial, sans-serif; padding: 20px;">
-
-<div style="max-width: 600px; margin: auto; background-color: white; padding: 20px; border-radius: 15px; box-shadow: 0px 0px 10px rgba(0,0,0,0.1);">
-    <h1 style="color: #ff535b; text-align: center;">Confirmación de Cita</h1>
-    <p style="font-size: 18px; line-height: 1.6; text-align: justify;">
-        Tu cita ha sido confirmada con éxito.
-    </p>
-    <p style="font-size: 18px; line-height: 1.6; text-align: justify;">
-        ¡Gracias por elegir nuestros servicios!
-    </p>
+<div class="container mt-4" style="max-width: 600px; margin: auto; background-color: white; padding: 20px; border-radius: 15px; box-shadow: 0px 0px 10px rgba(0,0,0,0.1);">
+    <div class="row">
+        <div class="col">
+            <h2 class="text-center mb-4 special-title" style="color: #ff0000;">Hola [[${name}]],</h2>
+            <div class="card">
+                <div class="card-header">
+                    <h3 class="card-title">Detalles de la cita cancelada con Psicologo: [[${psychologist}]]</h3>
+                </div>
+                <div class="special-box">
+                    <p>
+                        <strong>Fecha:</strong> [[${date}]]
+                    </p>
+                    <p>
+                        <strong>Hora:</strong> [[${time}]]
+                    </p>
+                    <p>
+                        <strong>ID de la cita:</strong> [[${appointmentId}]]
+                    </p>
+                </div>
+                <div class="card-body">
+                    <p>
+                        Lamentamos informarte que tu cita ha sido cancelada. Por favor, ten en cuenta tu ID de cita si necesitas hacer referencia a ella en el futuro.
+                    </p>
+                    <p>
+                        Si tienes algún problema con este cambio o necesitas más información, por favor no dudes en ponerte en contacto con nosotros.
+                    </p>
+                    <p>
+                        ¡Esperamos poder atenderte en el futuro!
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 </body>
 </html>
