--- a/src/main/resources/templates/CancelAppointment.html
+++ b/src/main/resources/templates/CancelAppointment.html
@@ -40,7 +40,7 @@
                         Si tienes algún problema con este cambio o necesitas más información, por favor no dudes en ponerte en contacto con nosotros.
                     </p>
                     <p>
-                        ¡Esperamos poder atenderte en el futuro!
+                        ¡Esperamos poder atenderte en el futuro! :D
                     </p>
                 </div>
             </div>
